gocept.linkchecker 3.0 (unreleased)

  New features

    - Major refactoring for Plone 3 compatibility including eggification.

    - Added conceptual difference between a link and a URL. This allows us to
      update links centrally and also to correctly highlight links in the
      content area.

    - Some code refactorings and source cleanup.