@@ -17,3 +17,4 @@ Contributions from:
     - Anton Stonor
     - Alexander Limi
     - Sebastian Stark
+    - Tom Gross
